--- a/week9/index.html
+++ b/week9/index.html
@@ -2,64 +2,112 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title></title>
+  <style>
+    .btn {
+      margin: 20px 5px 20px 0px;
+      background-color: blue;
+      color: white;
+      padding: 10px;
+    }
+  </style>
+
+  <title></title>
 </head>
 
-<body onload="getAJAX()">
-    <div class="container" id="display">
-    </div>
-    <div class="container">
-        <button class="btn" onclick="pre()">ก่อนหน้า</button>
-        <button class="btn" onclick="next()">ถัดไป</button>
-    </div>
+<body onload="getAjex()">
+  <div class="container">
+    <button class="btn" onclick="prev()">ก่อนหน้า</button>
+    <button class="btn" onclick="next()">ถัดไป</button>
+  </div>
+  <div class="container" id="display"></div>
+
+  <script>
+    let xhttp = new XMLHttpRequest();
+    let i = 0;
+
+    function getAjex() {
+      xhttp.open("GET", 'http://localhost:3000/movieReview');
+      xhttp.send();
+      xhttp.onload = function () {
+        let obj = JSON.parse(this.responseText);
+        let temp = '';
+        test = obj.length
+        temp +=
+          '<thead class="table-dark">'
+          + '<th>#</th>'
+          + '<th>Picture</> '
+          + '<th>movieName</th>'
+          + '<th>movieLength</th>'
+          + '<th>director</>'
+          + '<th>category</th>'
+          + '<th>trailer</th>'
+          + '<th>average</th>'
+          + '</thead > '
+          + '<tr>'
+          + '<td>' + obj[i].id + '</td>'
+          + '<td>' + '<img src="' + obj[i].picture + '" width="200px"></td>'
+          + '<td>' + obj[i].movieName + '</td>'
+          + '<td>' + obj[i].movieLength + '</td>'
+          + '<td>' + obj[i].director + '</td>'
+          + '<td>' + obj[i].category + '</td>'
+          + '<td>' + '<iframe width="500" height="295" src="' + obj[i].trailer + '"frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>' + '</td>'
+          + '<td>' + obj[i].review.score.average + '</td>'
+          + '</tr>'
+          + '<tfoot class="table-dark">'
+          + '<th>#</th>'
+          + '<th>Picture</> '
+          + '<th>movieName</th>'
+          + '<th>movieLength</th>'
+          + '<th>director</>'
+          + '<th>category</th>'
+          + '<th>trailer</th>'
+          + '<th>average</th>'
+          + '</tfoot > '
+        document.getElementById('display').innerHTML = '<table class="table table-bordered">' + temp + '</table>'
+      }
+    }
+    function next() {
+      i++;
+      if (i > test - 1) {
+        i = 0;
+      }
+      getAjex();
+    }
+
+    function prev() {
+      i--;
+      if (i < 0) {
+        i = test - 1;
+      }
+      getAjex();
+    }
+  </script>
 
 
-    <script>
-        let xhttp = new XMLHttpRequest();
-        let i = 0;
+  <!-- Optional JavaScript; choose one of the two! -->
 
-        function getAJAX() {
-            xhttp.open("GET", 'http://localhost:3000/movieReview');
-            xhttp.send();
-            xhttp.onload = function () {
-                let obj = JSON.parse(this.responseText);
-                let temp = '';
-                temp +=
-                    '<tr><td>' + obj[i].id + '</td><td>' + obj[i].movieName + '</td>' +'<td><img src="' + obj[i].picture +'</td>' +'" width="200px"></td>'+
-                    '<td>' + obj[i].movieLength + '</td>' + '<td>' + obj[i].director + '</td>' +
-                    '<td>' + obj[i].category + '</td>' + '<td>' + obj[i].trailer +
-                    '"frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td><td>' +
-                    +'<td>' + obj[i].review.review + '</td>' + '<td>' + obj[i].review.score.average + '</td>'
-                document.getElementById('display').innerHTML = '<table class="table">' + temp + '</table>'
-            }
-        }
-        if (i >= getAJAX) {
-            function next() {
-                i++;
-                getAJAX();
-            }
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 
-            function pre() {
-                i--;
-                getAJAX();
-            }
-        }
-    </script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-    </script>
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
