--- a/week9/index.html
+++ b/week9/index.html
@@ -13,8 +13,8 @@
   <style>
     .btn {
       margin: 20px 5px 20px 0px;
-      background-color: blue;
-      color: white;
+      background-color: rgb(228, 77, 140);
+      color: rgb(16, 14, 14);
       padding: 10px;
     }
   </style>
