--- a/week9/index.html
+++ b/week9/index.html
@@ -11,11 +11,15 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <style>
+    body{
+        background-image:url(33.jpg) ;
+    }
     .btn {
       margin: 20px 5px 20px 0px;
-      background-color: rgb(228, 77, 140);
+      background-color: rgb(83, 199, 253);
       color: rgb(16, 14, 14);
       padding: 10px;
+      
     }
   </style>
 
