--- a/week9/addMovie.html
+++ b/week9/addMovie.html
@@ -1,79 +1,92 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Title</title>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="</head>
-  <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <body>
-        <form id="myform">
-            <div class="row">
-                <div class="col-6">
-                    <label>MovieName</label>
-                    <input type="text" id="MovieName" class ="form-control">   
-                </div>          
-            <div class="col-6">
-                <label>MovieLength</label>
-                <input type="text" id="MovieLength" class ="form-control">   
-            </div>
-            <div class="col-4">
-                <label>Director</label>
-                <input type="text" id="Director" class ="form-control">   
-            </div>
-            <div class="col-4">
-                <label>Category</label>
-                <input type="text" id="Category" class ="form-control">    
-            </div>
-            <div class="col-4">
-                <label>Picture</label>
-                <input type="text" id="Picture" class ="form-control">     
-            </div>
-            <div class="col-4">
-                <label>Trailer</label>
-                <input type="text" id="Trailer" class ="form-control">   
-            </div>
-            <div class="col-4">
-                <label>Review</label>
-                <input type="text" id="Review" class ="form-control">   
-            </div>
-            <div class="col-4">
-                <label>Score</label>
-                <input type="text" id="Score" class ="form-control">   
-            </div>
-            <div class="col-2">
-                <label>ScreenPlay</label>
-                <input type="text" id="ScreenPlay" class ="form-control">   
-            </div>
-            <div class="col-2">
-                <label>Playing</label>
-                <input type="text" id="Playing" class ="form-control">   
-            </div>
-            <div class="col-2">
-                <label>Music</label>
-                <input type="text" id="Music" class ="form-control">   
-            </div>
-            <div class="col-2">
-                <label>ActorSkills</label>
-                <input type="text" id="ActorSkills" class ="form-control">   
-            </div>
-            <div class="col-2">
-                <label>Graphics</label>
-                <input type="text" id="Graphics" class ="form-control">   
-            </div>
-            <div class="col-2">
-                <label>Average</label>
-                <input type="text" id="Average" class ="form-control">   
-            </div>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <title>Form</title>
+</head>
+
+<body>
+    <div class="container">
+        <form action="" method="post" id="myform">
+            <div class="row">
+                <div class="col-8">
+                    <label for="" class="form-label">Movie Name</label>
+                    <input type="text" name="" class="form-control" id="movieName">
+                </div>
+                <div class="col-4">
+                    <label for="" class="form-label">Movie Length</label>
+                    <input type="number" name="" class="form-control" id="movieLength">
+                </div>
+
+                <div class="col-6">
+                    <label for="" class="form-label">Director</label>
+                    <input type="text" name="" class="form-control" id="director">
+                </div>
+                <div class="col-6">
+                    <label for="" class="form-label">Category</label>
+                    <input type="text" name="" class="form-control" id="category">
+                </div>
+
+                <div class="col-6">
+                    <label for="" class="form-label">Picture</label>
+                    <input type="file" name="" class="form-control" id="picture">
+                </div>
+                <div class="col-6">
+                    <label for="" class="form-label">Trailer</label>
+                    <input type="text" name="" class="form-control" id="trailer">
+                </div>
+                <div class="col-12">
+                    <label for="" class="form-label">Review</label>
+                    <textarea type="text" name="" class="form-control" id="review"></textarea>
+                </div>
+                <div class="col">
+                    <label for="" class="form-label">ScreenPlay</label>
+                    <input type="number" name="" class="form-control" id="screenPlay">
+                </div>
+                <div class="col">
+                    <label for="" class="form-label">Playing</label>
+                    <input type="number" name="" class="form-control" id="playing">
+                </div>
+                <div class="col">
+                    <label for="" class="form-label">music</label>
+                    <input type="number" name="" class="form-control" id="music">
+                </div>
+                <div class="col">
+                    <label for="" class="form-label">actorSkills</label>
+                    <input type="number" name="" class="form-control" id="actorSkills">
+                </div>
+                <div class="col ">
+                    <label for="" class="form-label">graphics</label>
+                    <input type="number" name="" class="form-control" id="graphics">
+                </div>
+            </div>
         </form>
-  </body>
+    </div>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+
+</body>
+
 </html>
