--- a/week9/addMovie.html
+++ b/week9/addMovie.html
@@ -80,6 +80,7 @@
     <script>
         function addMovie() {
             let obj = {
+            "id":'',
             "movieName": document.forms['myform']['movieName'].value,
             "movieLength": document.forms['myform']['movieLength'].value,
             "director": document.forms['myform']['director'].value,
@@ -99,6 +100,15 @@
                 }
             }
             console.log(obj);
+            let text = JSON.stringify(obj);
+            console.log("Text",text);
+
+            let xhttp = new XMLHttpRequest();
+            xhttp.open("POST","http://localhost:3000/movieReview");
+            xhttp.send(text);
+            xhttp.setRequestHeader("Content-Type","application/json")
+            
+
         }
     </script>
 
