--- a/week9/index.html
+++ b/week9/index.html
@@ -11,15 +11,36 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <style>
-    body{
-        background-image:url(33.jpg) ;
+    @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
-    .btn {
-      margin: 20px 5px 20px 0px;
-      background-color: rgb(83, 199, 253);
-      color: rgb(16, 14, 14);
+
+    body {
+      font-weight: bold;
+      background: #001e42;
+      font-family: 'Fredoka One', cursive;
+    }
+
+    .btnprev {
+      margin: 20px 5px;
+      background-color: blue;
+      color: white;
       padding: 10px;
-      
+      float: right;
+      border: none;
+    }
+
+    .btnnext {
+      margin: 20px 5px;
+      background-color: blue;
+      color: white;
+      padding: 10px;
+      float: left;
+      border: none;
     }
   </style>
 
@@ -28,8 +49,8 @@
 
 <body onload="getAjex()">
   <div class="container">
-    <button class="btn" onclick="prev()">ก่อนหน้า</button>
-    <button class="btn" onclick="next()">ถัดไป</button>
+    <button class="btnprev" onclick="prev()">ก่อนหน้า</button>
+    <button class="btnnext" onclick="next()">ถัดไป</button>
   </div>
   <div class="container" id="display"></div>
 
@@ -45,37 +66,27 @@
         let temp = '';
         test = obj.length
         temp +=
-          '<thead class="table-dark">'
+          '<thead class="table-dark table-bordered border-white">'
           + '<th>#</th>'
           + '<th>Picture</> '
-          + '<th>movieName</th>'
-          + '<th>movieLength</th>'
-          + '<th>director</>'
-          + '<th>category</th>'
-          + '<th>trailer</th>'
-          + '<th>average</th>'
+          + '<th>Name</th>'
+          + '<th>MovieLength</th>'
+          + '<th>Director</>'
+          + '<th>Category</th>'
+          + '<th>Trailer</th>'
+          + '<th>Average</th>'
           + '</thead > '
           + '<tr>'
           + '<td>' + obj[i].id + '</td>'
           + '<td>' + '<img src="' + obj[i].picture + '" width="200px"></td>'
           + '<td>' + obj[i].movieName + '</td>'
-          + '<td>' + obj[i].movieLength + '</td>'
+          + '<td>' + obj[i].movieLength + ' นาที</td>'
           + '<td>' + obj[i].director + '</td>'
           + '<td>' + obj[i].category + '</td>'
           + '<td>' + '<iframe width="500" height="295" src="' + obj[i].trailer + '"frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>' + '</td>'
           + '<td>' + obj[i].review.score.average + '</td>'
           + '</tr>'
-          + '<tfoot class="table-dark">'
-          + '<th>#</th>'
-          + '<th>Picture</> '
-          + '<th>movieName</th>'
-          + '<th>movieLength</th>'
-          + '<th>director</>'
-          + '<th>category</th>'
-          + '<th>trailer</th>'
-          + '<th>average</th>'
-          + '</tfoot > '
-        document.getElementById('display').innerHTML = '<table class="table table-bordered">' + temp + '</table>'
+        document.getElementById('display').innerHTML = '<table class="table table-dark table-striped table-bordered border-white">' + temp + '</table>'
       }
     }
     function next() {
@@ -94,7 +105,6 @@
       getAjex();
     }
   </script>
-
 
   <!-- Optional JavaScript; choose one of the two! -->
 
