--- a/week8/addblog.html
+++ b/week8/addblog.html
@@ -10,6 +10,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+        <style>
+ body {
+      font-weight: bold;
+      background: #cfcfd7;
+      font-family: 'Fredoka One', cursive;
+    }
+        </style>
     <title>Form</title>
 </head>
 
@@ -17,7 +24,7 @@
     <div class="container">
         <form action="" method="post" id="myform">
             <div class="row">
-                <h1>Add Review</h1>
+                <h1>Add Book</h1>
                 <div class="col-6">
                     <label for="" class="form-label">book title</label>
                     <input type="text" name="" class="form-control" id="booktitle">
@@ -41,7 +48,7 @@
                 </div>
                 <div class="col-6">
                     <label for="" class="form-label">picture</label>
-                    <input type="text" name="" class="form-control" id="picture">
+                    <input type="text" name="" class="form-control" id="picture" placeholder="Url">
                 </div>
             </div>
             <h1></h1>
