--- a/week9/index.html
+++ b/week9/index.html
@@ -21,7 +21,7 @@
 
     body {
       font-weight: bold;
-      background: #001e42;
+      background-image:url(33.jpg) ;
       font-family: 'Fredoka One', cursive;
     }
 
