--- a/week8/addblog.html
+++ b/week8/addblog.html
@@ -26,28 +26,28 @@
             <div class="row">
                 <h1>Add Book</h1>
                 <div class="col-6">
-                    <label for="" class="form-label">book title</label>
+                    <label for="" class="form-label">ชื่อหนังสือ</label>
                     <input type="text" name="" class="form-control" id="booktitle">
                 </div>
                 <div class="col-6">
-                    <label for="" class="form-label">author</label>
+                    <label for="" class="form-label">ผู้เขียน</label>
                     <input type="text" name="" class="form-control" id="author">
                 </div>
 
                 <div class="col-6">
-                    <label for="" class="form-label">publisher</label>
+                    <label for="" class="form-label">สำนักพิมพ์</label>
                     <input type="text" name="" class="form-control" id="publisher">
                 </div>
                 <div class="col">
-                    <label for="" class="form-label">year</label>
+                    <label for="" class="form-label">ปี</label>
                     <input type="number" min="0" max="10" name="" class="form-control" id="year" >
                 </div>
                 <div class="col">
-                    <label for="" class="form-label">price</label>
+                    <label for="" class="form-label">ราคา</label>
                     <input type="number" min="0" max="10" name="" class="form-control" id="price" >
                 </div>
                 <div class="col-6">
-                    <label for="" class="form-label">picture</label>
+                    <label for="" class="form-label">ลิงค์รูปภาพ</label>
                     <input type="text" name="" class="form-control" id="picture" placeholder="Url">
                 </div>
             </div>
