--- a/week8/addblog.html
+++ b/week8/addblog.html
@@ -39,7 +39,7 @@
                     <input type="text" name="" class="form-control" id="publisher">
                 </div>
                 <div class="col">
-                    <label for="" class="form-label">ปี</label>
+                    <label for="" class="form-label">ปีหนังสือ</label>
                     <input type="number" min="0" max="10" name="" class="form-control" id="year" >
                 </div>
                 <div class="col">
