--- a/week8/index.html
+++ b/week8/index.html
@@ -49,8 +49,9 @@ body {
 
 <body onload="getAjex()">
   <div class="container">
-    <button class="btnprev" onclick="prev()">ก่อนหน้า</button>
-    <button class="btnnext" onclick="next()">ถัดไป</button>
+    <button class="btnnext" onclick="prev()">ก่อนหน้า</button>
+    <button class="btnprev" onclick="next()">ถัดไป</button>
+    
   </div>
   <div class="container" id="display"></div>
 
